protocols/tests/inverters/inverter_d0.prot
struct Inverter {
  in a: u32,
  out s: u32,
}

prot invert<DUT: Inverter>(in a: u32, out s: u32) {
  DUT.a := DUT.s;
  step();
}
